add_subdirectory( algorithm )
add_subdirectory( async )
add_subdirectory( bson )
add_subdirectory( byte )
add_subdirectory( cache )
add_subdirectory( crypto )
add_subdirectory( mongo )
add_subdirectory( script )
add_subdirectory( plugin )
add_subdirectory( protocol )
add_subdirectory( ssl )
add_subdirectory( token )
