astateful_add_test( protocol ssl net )
astateful_target_test( protocol async BSON byte cache crypto mongo plugin token script )
find_package( LLVM REQUIRED CONFIG )
add_definitions( ${LLVM_DEFINITIONS} )
llvm_map_components_to_libnames( llvm_libs all )
target_link_libraries( protocolTests ${llvm_libs} )